# registry-rs

./: Cargo.toml  README.md
src/: main.rs
src/endpoints/: mod.rs
src/storage/: memory.rs  mod.rs
